--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,22 @@
-# Binaries for programs and plugins
-*.exe
-*.dll
-*.so
-*.dylib
+# ignore the following files and directories
 
-# Test binary, build with `go test -c`
-*.test
+# ignore all files in the `workspace` directory
+workspace/
 
-# Output of the go coverage tool
-*.out
+# ignore all files in the `__pycache__` directory
+__pycache__/
 
-# Go build artifacts
-/bin
-/build
-/target
+# ignore all .log files
+*.log
 
-# Go modules directory
-/go.mod
-/go.sum
+# ignore all .txt files
+*.txt
 
-# Go vendor directory
-/vendor
+# ignore all .env files
+*.env
 
-# Docker files
-Dockerfile
-docker-compose.yml
+# ignore all .pyc files
+*.pyc
 
-# Other files
-/workspace
+# ignore the .DS_Store files
+.DS_Store
